cfn_template/SEcurityGroup.yml
AWSTemplateFormatVersion: "2010-09-09"
Description:  SecurityGroup sample

Resources:
    SecurityGroup01:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: launch-wizard
            GroupDescription: launch-wizard_CloudFormation
            VpcId: !ImportValue stack01-1-VPCID
            SecurityGroupIngress:
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "80"
                  ToPort: "80"
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "443"
                  ToPort: "443"
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "22"
                  ToPort: "22"
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "3000"
                  ToPort: "3000"

    SecurityGroup02:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: raisetech10th_toEC2-2
            GroupDescription: raisetech10th_toEC2-2_CloudFormation
            VpcId: !ImportValue stack01-1-VPCID
            SecurityGroupIngress:
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "80"
                  ToPort: "80"
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "443"
                  ToPort: "443"
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "22"
                  ToPort: "22"
                - IpProtocol: tcp
                  CidrIp: 0.0.0.0/0
                  FromPort: "3000"
                  ToPort: "3000"

    SecurityGroupIgress1:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            GroupId: !Ref SecurityGroup02
            SourceSecurityGroupId: !Ref SecurityGroup01

    SecurityGroup03:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupName: raisetech10th-DB-wizard-02
            GroupDescription: raisetech10th-DB-wizard-02_CloudFormation
            VpcId: !ImportValue stack01-1-VPCID

    SecurityGroupIgress2:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            IpProtocol: tcp
            FromPort: 3306
            ToPort: 3306
            GroupId: !Ref SecurityGroup03
            SourceSecurityGroupId: !Ref SecurityGroup02

Outputs:
#stackname：stack01-3
    StackSecurity01:
        Description: SecurityGroup01 ID
        Value: !Ref SecurityGroup01
        Export:
            Name: !Sub "${AWS::StackName}-Security01"

    StackSecurity02:
        Description: SecurityGroup02 ID
        Value: !Ref SecurityGroup02
        Export:
            Name: !Sub "${AWS::StackName}-Security02"

    StackSecurity03:
        Description: SecurityGroup03 ID
        Value: !Ref SecurityGroup03
        Export:
            Name: !Sub "${AWS::StackName}-Security03"
